[package]
name = "js-redis-stream-client"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-stream-client = {git = "https://github.com/mobiltracker/rs-redis-stream-client"}
redis = {version = "0.21.3"}
once_cell = "*"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
[dependencies.neon]
version = "0.10.0-alpha.2"
default-features = false
features = ["napi-6", "promise-api", "task-api"]
